Changelog
=========


1.1
---


1.0
---

* Initial release
  [24.08.2010, jbaumann]