@@ -5,6 +5,9 @@ Changelog
 1.1
 ---
 
+* Translated configuration interval.
+  [jbaumann]
+
 
 1.0
 ---
